syntax = "proto3";


import "app/improving/tenant/domain/tenant_context_domain.proto";
import "common_domain.proto";


package app.improving.tenantcontext.tenant;

message Tenant {
    TenantId tenantId = 1;
    string name =  2;
    Contact primaryContact = 3;
    Info info = 4;
    MetaInfo meta = 5;
    TenantStatus status = 6;
}

message TenantState {
    Tenant tenant = 1;
}